; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_oper.c_LookupOperName.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_oper.c_LookupOperName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_UNDEFINED_FUNCTION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"operator does not exist: %s\00", align 1
@InvalidOid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LookupOperName(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8, align 1
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %16 = load i32*, i32** %9, align 8
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = call i32 @OpernameGetOprid(i32* %16, i32 %17, i32 %18)
  store i32 %19, i32* %14, align 4
  %20 = load i32, i32* %14, align 4
  %21 = call i64 @OidIsValid(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %6
  %24 = load i32, i32* %14, align 4
  store i32 %24, i32* %7, align 4
  br label %56

25:                                               ; preds = %6
  %26 = load i32, i32* %12, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %54, label %28

28:                                               ; preds = %25
  %29 = load i32, i32* %10, align 4
  %30 = call i64 @OidIsValid(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %33, label %32

32:                                               ; preds = %28
  store i8 108, i8* %15, align 1
  br label %40

33:                                               ; preds = %28
  %34 = load i32, i32* %11, align 4
  %35 = call i64 @OidIsValid(i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %38, label %37

37:                                               ; preds = %33
  store i8 114, i8* %15, align 1
  br label %39

38:                                               ; preds = %33
  store i8 98, i8* %15, align 1
  br label %39

39:                                               ; preds = %38, %37
  br label %40

40:                                               ; preds = %39, %32
  %41 = load i32, i32* @ERROR, align 4
  %42 = load i32, i32* @ERRCODE_UNDEFINED_FUNCTION, align 4
  %43 = call i32 @errcode(i32 %42)
  %44 = load i32*, i32** %9, align 8
  %45 = load i8, i8* %15, align 1
  %46 = load i32, i32* %10, align 4
  %47 = load i32, i32* %11, align 4
  %48 = call i32 @op_signature_string(i32* %44, i8 signext %45, i32 %46, i32 %47)
  %49 = call i32 @errmsg(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %48)
  %50 = load i32*, i32** %8, align 8
  %51 = load i32, i32* %13, align 4
  %52 = call i32 @parser_errposition(i32* %50, i32 %51)
  %53 = call i32 @ereport(i32 %41, i32 %52)
  br label %54

54:                                               ; preds = %40, %25
  %55 = load i32, i32* @InvalidOid, align 4
  store i32 %55, i32* %7, align 4
  br label %56

56:                                               ; preds = %54, %23
  %57 = load i32, i32* %7, align 4
  ret i32 %57
}

declare dso_local i32 @OpernameGetOprid(i32*, i32, i32) #1

declare dso_local i64 @OidIsValid(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @op_signature_string(i32*, i8 signext, i32, i32) #1

declare dso_local i32 @parser_errposition(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
